@@ -3,6 +3,8 @@
                               Kiji Schema Release Notes
 
 Version 1.0.0-rc5
+  * SCHEMA-136. Make KijiRowKeySplitter a non-static class. Get an instance
+      with the KijiRowKeySplitter.get() method.
   * SCHEMA-145. Change KijiColumnFilter.Context to abstract class.
   * SCHEMA-199. VALID_INSTANCE_NAME should not match the empty string.
   * SCHEMA-9. Add a CLI tool for KijiSchema System Table.
